@@ -17,6 +17,10 @@
         <!-- ***  Build settings                                              *** -->
         <!-- ==================================================================== -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        
+        <!-- *** Path to the GeneiousFiles directory, which contains all     *** -->
+        <!-- *** external, non-maven-managed dependencies, and which also is *** -->        
+        <!-- *** the working directory from which to launch Geneious         *** -->
         <GeneiousFiles.dir>/home/ayco/apps/geneious-2019.0.4-devkit/examples/GeneiousFiles</GeneiousFiles.dir>              
 
         <!-- ==================================================================== -->
@@ -89,6 +93,8 @@
             <artifactId>guava-base</artifactId>
             <version>r03</version>
         </dependency>
+        
+        <!-- TEST scope -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -135,6 +141,11 @@
                     <groupId>pl.project13.maven</groupId>
                     <artifactId>git-commit-id-plugin</artifactId>
                     <version>${git-commit-id-plugin.version}</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>3.0.0-M3</version>
                 </plugin>
             </plugins>
         </pluginManagement>
@@ -183,6 +194,99 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <workingDirectory>${GeneiousFiles.dir}</workingDirectory>
+                    <environmentVariables>
+                        <LD_LIBRARY_PATH>./activation/linux64:./native_libs/linux64</LD_LIBRARY_PATH>
+                    </environmentVariables>
+                    <argLine>--add-opens=java.base/jdk.internal.reflect=ALL-UNNAMED</argLine>
+                    <additionalClasspathElements>
+                        <additionalClasspathElement>${GeneiousFiles.dir}/iSeek.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${GeneiousFiles.dir}/resources</additionalClasspathElement>
+                        <!-- *** Everything below generated by class nl.naturalis.geneious.GenerateMavenTestClassPath *** -->
+                        <additionalClasspathElement>${GeneiousFiles.dir}/lib/CryptoUtilities.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${GeneiousFiles.dir}/lib/EccpressoAll.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${GeneiousFiles.dir}/lib/GeneiousPublicAPI.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${GeneiousFiles.dir}/lib/MacOsIntegration.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${GeneiousFiles.dir}/lib/MaskedShellFolderManager.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${GeneiousFiles.dir}/lib/ObjCBridge.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${GeneiousFiles.dir}/lib/PrivateAPI.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${GeneiousFiles.dir}/lib/UsageTrackingShared.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${GeneiousFiles.dir}/lib/VersionTestLibrary.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${GeneiousFiles.dir}/lib/WindowsIntegration.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${GeneiousFiles.dir}/lib/activation.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${GeneiousFiles.dir}/lib/avalon-framework-4.1.5.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${GeneiousFiles.dir}/lib/batik-all-1.10.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${GeneiousFiles.dir}/lib/bcpg-jdk15on-147.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${GeneiousFiles.dir}/lib/bcprov-jdk15on-147.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${GeneiousFiles.dir}/lib/biojava-1.5.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${GeneiousFiles.dir}/lib/bytecode.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${GeneiousFiles.dir}/lib/common.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${GeneiousFiles.dir}/lib/commons-cli.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${GeneiousFiles.dir}/lib/commons-collections4-4.1.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${GeneiousFiles.dir}/lib/commons-compress-1.4.1.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${GeneiousFiles.dir}/lib/commons-dbcp-1.1.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${GeneiousFiles.dir}/lib/commons-io-2.6.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${GeneiousFiles.dir}/lib/commons-lang3-3.3.2.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${GeneiousFiles.dir}/lib/commons-logging-1.0.4.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${GeneiousFiles.dir}/lib/commons-math3-3.5.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${GeneiousFiles.dir}/lib/commons-net-1.4.1.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${GeneiousFiles.dir}/lib/commons-pool-1.1.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${GeneiousFiles.dir}/lib/crypto.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${GeneiousFiles.dir}/lib/dynclass.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${GeneiousFiles.dir}/lib/epsgraphics.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${GeneiousFiles.dir}/lib/flexlm.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${GeneiousFiles.dir}/lib/flexnetActivation.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${GeneiousFiles.dir}/lib/flexnetInstallerHelper.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${GeneiousFiles.dir}/lib/fop-2.2.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${GeneiousFiles.dir}/lib/freehep-graphics2d-2.3.1.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${GeneiousFiles.dir}/lib/freehep-graphicsbase-2.3.1.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${GeneiousFiles.dir}/lib/freehep-graphicsio-2.3.1.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${GeneiousFiles.dir}/lib/freehep-graphicsio-emf-2.3.1.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${GeneiousFiles.dir}/lib/freehep-graphicsio-java-2.3.1.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${GeneiousFiles.dir}/lib/freehep-graphicsio-swf-2.3.1.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${GeneiousFiles.dir}/lib/freehep-io-2.2.2.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${GeneiousFiles.dir}/lib/freehep-util-2.1.2.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${GeneiousFiles.dir}/lib/gag.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${GeneiousFiles.dir}/lib/geneiouscliapi-11.0.3-SNAPSHOT.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${GeneiousFiles.dir}/lib/glazedlists-1.6.0_java15.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${GeneiousFiles.dir}/lib/guava-25.0-jre.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${GeneiousFiles.dir}/lib/i4jruntime.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${GeneiousFiles.dir}/lib/jackson-annotations-2.7.5.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${GeneiousFiles.dir}/lib/jackson-core-2.7.5.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${GeneiousFiles.dir}/lib/jackson-databind-2.7.5.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${GeneiousFiles.dir}/lib/jakarta-oro-2.0.8.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${GeneiousFiles.dir}/lib/jakarta-regexp-1.4.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${GeneiousFiles.dir}/lib/javassist-3.18.2-GA.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${GeneiousFiles.dir}/lib/jcommander.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${GeneiousFiles.dir}/lib/jdom-contrib.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${GeneiousFiles.dir}/lib/jdom.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${GeneiousFiles.dir}/lib/jebl.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${GeneiousFiles.dir}/lib/jna-4.5.1.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${GeneiousFiles.dir}/lib/jna-platform-4.5.1.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${GeneiousFiles.dir}/lib/jsr305-1.3.9.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${GeneiousFiles.dir}/lib/juniversalchardet-1.0.3.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${GeneiousFiles.dir}/lib/log4j-1.2.17.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${GeneiousFiles.dir}/lib/lucene-core-2.9.3.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${GeneiousFiles.dir}/lib/mail.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${GeneiousFiles.dir}/lib/org-netbeans-swing-outline.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${GeneiousFiles.dir}/lib/oshi-core-3.5.0.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${GeneiousFiles.dir}/lib/piccolo2d-core-1.3.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${GeneiousFiles.dir}/lib/piccolo_xml.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${GeneiousFiles.dir}/lib/slf4j-api-1.7.21.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${GeneiousFiles.dir}/lib/talkbackShared.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${GeneiousFiles.dir}/lib/threetenbp-1.3.6.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${GeneiousFiles.dir}/lib/truezip-6.8.3.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${GeneiousFiles.dir}/lib/webservices-api.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${GeneiousFiles.dir}/lib/webservices-rt.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${GeneiousFiles.dir}/lib/xml-apis-ext-1.3.04.jar</additionalClasspathElement>
+                        <additionalClasspathElement>${GeneiousFiles.dir}/lib/xmlgraphics-commons-2.2.jar</additionalClasspathElement>
+                    </additionalClasspathElements>
+                </configuration>
             </plugin>
         </plugins>
     </build>
